--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <form action="">
     <fieldset id="" class="">
             <select name="bug_browser" id="bug-browser">
-                <option value="" selected="selected">Izaberite</option>
+                <option selected="selected" value="" >Select</option>
                 <optgroup label="Firefox">
                     <option value="Firefox 3">Firefox 3</option>
                     <option value="Firefox 3.5">Firefox 3.5</option>
