Started refactoring code.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <form action="">
     <fieldset id="" class="">
-            <select name="bug_browser" id="bug-browser">
+            <select class="doggy" name="bug_browser" id="bug-browser">
                 <option selected="selected" value="" >Select</option>
                 <optgroup label="Firefox">
                     <option value="Firefox 3">Firefox 3</option>
