Removed unused CSS and fixed library to work on IE 7+.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 <form action="">
     <fieldset id="" class="">
             <select class="doggy" name="bug_browser" id="bug-browser">
-                <option selected="selected" value="" >Select</option>
                 <optgroup label="Firefox">
                     <option value="Firefox 3">Firefox 3</option>
                     <option value="Firefox 3.5">Firefox 3.5</option>
@@ -30,15 +29,18 @@
                     <option value="Safari 4">Safari 4</option>
                     <option value="Safari 5">Safari 5</option>
                 </optgroup>
-
                 <optgroup label="Google Chrome">
                     <option value="Google Chrome 4">Google Chrome 4</option>
                     <option value="Google Chrome 5">Google Chrome 5</option>
+                    <option value="Google Chrome 6">Google Chrome 6</option>
+                    <option value="Google Chrome 7">Google Chrome 7</option>
+                    <option value="Google Chrome 8">Google Chrome 8</option>
+                    <option value="Google Chrome 9">Google Chrome 9</option>
+                    <option value="Google Chrome 10">Google Chrome 10</option>
                 </optgroup>
                 <optgroup label="Internet Explorer">
                     <option value="Internet Explorer 7">Internet Explorer 7</option>
                     <option value="Internet Explorer 8">Internet Explorer 8</option>
-
                     <option value="Internet Explorer 9">Internet Explorer 9</option>
                 </optgroup>
                 <optgroup label="Opera">
