Update remote called value.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <option value="Safari 5">Safari 5</option>
                 </optgroup>
                 <optgroup label="Google Chrome">
+                    <option value="pera">Pero Deformero</option>
                     <option value="Google Chrome 4">Google Chrome 4</option>
                     <option value="Google Chrome 5">Google Chrome 5</option>
                     <option value="Google Chrome 6">Google Chrome 6</option>
