Moved script to bottom of the document (better performance).

--- a/index.html
+++ b/index.html
@@ -5,22 +5,14 @@
     <title>Dropdownized</title>
 
     <link type="text/css" rel="stylesheet" href="assets/stylesheets/main.css" />
-
-    <script src="assets/javascript/jquery/jquery-1.4.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="assets/javascript/jquery/jquery.dropdownized.js" type="text/javascript" charset="utf-8"></script>
-    <script type="text/javascript">
-        $(document).ready(function(){
-            $('select').dropdownized();
-        });
-    </script>
 </head>
 <body>
 
 <form action="">
     <fieldset id="" class="">
             <select class="doggy" name="bug_browser" id="bug-browser">
+                <option value=""></option>
                 <optgroup label="Firefox">
-                    <option value=""></option>
                     <option value="Firefox 3">Firefox 3</option>
                     <option value="Firefox 3.5">Firefox 3.5</option>
                     <option value="Firefox 4">Firefox 4</option>
@@ -31,7 +23,6 @@
                     <option value="Safari 5">Safari 5</option>
                 </optgroup>
                 <optgroup label="Google Chrome">
-                    <option value="pera">Pero Deformero</option>
                     <option value="Google Chrome 4">Google Chrome 4</option>
                     <option value="Google Chrome 5">Google Chrome 5</option>
                     <option value="Google Chrome 6">Google Chrome 6</option>
@@ -53,5 +44,12 @@
     </fieldset>
 </form>
 
+    <script src="assets/javascript/jquery/jquery-1.6.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="assets/javascript/jquery/jquery.dropdownized.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('select').dropdownized();
+        });
+    </script>
 </body>
 </html>
